Add notes on momentum, RMSprop, ADAM optimization, and learning rate decaying

--- a/improving_neural_network.ipynb
+++ b/improving_neural_network.ipynb
@@ -202,9 +202,155 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcfddeea",
+   "id": "b13e5782",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Mini-batch gradient descent\n",
+    "\n",
+    "mini-batch is to divide the entire training set into several smaller training set to speed up gradient descent.\n",
+    "\n",
+    "$x^{\\{t\\}}$ represents $t_{th}$ mini batch\n",
+    "\n",
+    "<img src=\"image/note2/minibatch.png\" style=\"width:70%;\">  \n",
+    "\n",
+    "mini-batch training has more oscillations, since each iteration it is training on a different mini batch: \n",
+    "\n",
+    "<img src=\"image/note2/minibatchtrain.png\" style=\"width:50%;\">  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b318535",
+   "metadata": {},
+   "source": [
+    "## Mini-batch Size\n",
+    "\n",
+    "- If mini-batch size = m: Batch gradient descent (too slow)\n",
+    "\n",
+    "- If mini-batch size = 1: Stochastic gradient descent (too much noise)\n",
+    "\n",
+    "- In practice: choose a size between 1 and m, because it can both use the advantages of vectorization and smaller training set\n",
+    "\n",
+    "#### Choose Your Mini-batch Size\n",
+    "\n",
+    "small training set(m <= 2000): Use batch gradient descent\n",
+    "\n",
+    "Typical mini-batch size: 64, 128, 256, 512, power of 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16112abc",
+   "metadata": {},
+   "source": [
+    "## Exponentially Weighted Averages\n",
+    "If we want to calculate the temperature.\n",
+    "\n",
+    "Formula:\n",
+    "\n",
+    "$$V_t = \\beta V_{t-1} + (1-\\beta)\\theta_t$$\n",
+    "\n",
+    "where $V_t$ is approximately average over $\\frac{1}{1-\\beta}$ days' temperature.\n",
+    "\n",
+    "If $\\beta = 0.9$, then this formula can compute the average over the last 10 days. \n",
+    "\n",
+    "<img src=\"image/note2/average.png\" style=\"width:70%;\">  \n",
+    "\n",
+    "the green line represent $\\beta = 0.98$ and the red line represents $\\beta = 0.9$. Having a larger $\\beta$ means having a larger weight to the previous values. Therefore, the green line adapts more slowly. On the other hand, the red line is more noisy, since it averages over a much shorter window.\n",
+    "\n",
+    "The v graph is a exponentially decaying graph, and this formula is just add all the values with the decaying weight from that graph."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6415c977",
+   "metadata": {},
+   "source": [
+    "## Bias Correction\n",
+    "\n",
+    "At the beginning exponentially weighted averages, the value is underestimated since $V_0 = 0$, so we should use $\\frac{V_t}{1-\\beta^t}$ to make correction.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "722484b7",
+   "metadata": {},
+   "source": [
+    "## Gradient Descent with Momentum\n",
+    "<img src=\"image/note2/momentum.png\" style=\"width:70%;\">  \n",
+    "\n",
+    "When doing gradient descent with momentum, the gradient descent will also consider previous gradients. Thus, there will be less oscillations.  \n",
+    "\n",
+    "Think gradient descent with momentum as a ball. It will accelerate at the right direction since the gradient has a consistent direction, and decelerate at unnecessary directions due to oscillations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba3b3cae",
+   "metadata": {},
+   "source": [
+    "## RMSprop(root mean square prop)\n",
+    "\n",
+    "<img src=\"image/note2/RMS.png\" style=\"width:70%;\">  \n",
+    "\n",
+    "RMSprop is used to reduce oscillations. Direction with consistently large gradient will have a large denominator, effectively lowering their learning rate, while directions that has more stable gradient get a relatively larger learning rate.\n",
+    "\n",
+    "epsilon pervents the term to be divided by zero or an extremely small value.\n",
+    "\n",
+    "The only difference between momentum and RMSprop is that RMSprop is square, so RMSprop only considers the magnitude instead of direction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1b9a585",
+   "metadata": {},
+   "source": [
+    "## Adam(Adaptive Moment Estimation) Optimization Algorithm\n",
+    "\n",
+    "$V_{dw} = 0, S_{dw} = 0, V_{db} = 0, S_{db} = 0$\n",
+    "\n",
+    "On iteration $t$:\n",
+    "\n",
+    "Compute $dw, db$ using current mini-batch\n",
+    "\n",
+    "$V_{dw} = \\beta_1 V_{dw} + (1-\\beta_1)dw,  V_{db} = \\beta_1 V_{db} + (1-\\beta_1)db$  <-- momentum $\\beta_1$\n",
+    "\n",
+    "$S_{dw} = \\beta_2 S_{dw} + (1-\\beta_2)dw^2,  S_{db} = \\beta_2 S_{db} + (1-\\beta_2)db^2$  <-- RMSprop $\\beta_2$\n",
+    "\n",
+    "$V_{dw}^{corrected} = \\frac{V_{dw}}{1-\\beta_1^t}, V_{db}^{corrected} = \\frac{V_{db}}{1-\\beta_1^t}$\n",
+    "\n",
+    "$S_{dw}^{corrected} = \\frac{S_{dw}}{1-\\beta_2^t}, S_{db}^{corrected} = \\frac{S_{db}}{1-\\beta_2^t}$\n",
+    "\n",
+    "$w := w - \\alpha\\frac{V_{dw}^{corr}}{\\sqrt{S_{dw}^{corr}}+\\epsilon}$\n",
+    "\n",
+    "$b := b - \\alpha\\frac{V_{db}^{corr}}{\\sqrt{S_{db}^{corr}}+\\epsilon}$\n",
+    "\n",
+    "\n",
+    "#### Hyperparameter choices\n",
+    "- $\\alpha$ : needs to be tune\n",
+    "- $\\beta_1$ : 0.9  --> first moment\n",
+    "- $\\beta_2$ : 0.999  --> second moment\n",
+    "- $\\epsilon$ : $10^{-8}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b8dba08",
+   "metadata": {},
+   "source": [
+    "## Learning Rate Decay\n",
+    "Fixed value of $\\alpha$ will not converge very well. A smaller learning rate will end up oscillating in a tight region around the minimum.\n",
+    "\n",
+    "1 epoch = 1 pass through all data\n",
+    "\n",
+    "$\\alpha = \\frac{1}{1+\\text{decayrate} * epoch_{num}} \\alpha_0$\n",
+    "\n",
+    "$\\alpha = 0.95^{epoch_{num}} * \\alpha_0$  <-- exponential decay\n",
+    "\n",
+    "$\\alpha = \\frac{k}{\\sqrt{epoch_{num}}} * \\alpha_0$\n",
+    "\n",
+    "or discrete staircase"
+   ]
   }
  ],
  "metadata": {
