Implemented batch normalization using gradient descent

--- a/2. Improving_Neural_Network/Ann_from_Scratch_Advance.ipynb
+++ b/2. Improving_Neural_Network/Ann_from_Scratch_Advance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": null,
    "id": "43790e09",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "id": "1ee00c22",
    "metadata": {},
    "outputs": [],
@@ -141,10 +141,16 @@
     "        self.weights = []\n",
     "        self.bias = []\n",
     "\n",
+    "        self.gamma = []\n",
+    "        self.beta = []\n",
+    "\n",
     "        # initializing weights and bias\n",
     "        for i in range(len(layer_size)-1):\n",
     "            self.weights.append(np.random.rand(layer_size[i+1], layer_size[i]) * 0.01)\n",
     "            self.bias.append(np.zeros((layer_size[i+1], 1)))\n",
+    "\n",
+    "            self.gamma.append(np.ones((layer_size[i+1], 1)))\n",
+    "            self.beta.append(np.zeros((layer_size[i+1], 1)))\n",
     "\n",
     "    # forward propagation\n",
     "    def forward(self, a0):\n",
@@ -152,6 +158,7 @@
     "        self.z_value = []\n",
     "        self.a_value = [a0]\n",
     "        self.masks = []\n",
+    "        self.bn_cache = []\n",
     "        \n",
     "        for idx, (w,b) in enumerate(zip(self.weights, self.bias)):\n",
     "            z = np.dot(w, a) + b\n",
@@ -161,7 +168,15 @@
     "                elif self.output_activation == \"softmax\":\n",
     "                    a = self.softmax(z)\n",
     "            else:  # hidden layers use ReLU function\n",
-    "                a = self.ReLU(z)\n",
+    "                # Batch Norm\n",
+    "                mu = np.mean(z, axis=1, keepdims=True)\n",
+    "                sigma = np.var(z, axis=1, keepdims=True)\n",
+    "                z_norm = (z - mu)/np.sqrt(sigma + 1e-8)\n",
+    "                z_tilde = self.gamma[idx] * z_norm + self.beta[idx]\n",
+    "\n",
+    "                self.bn_cache.append([z, mu, sigma, z_norm])\n",
+    "\n",
+    "                a = self.ReLU(z_tilde)\n",
     "                if self.dropout < 1.0:\n",
     "                    mask = np.random.rand(a.shape[0], a.shape[1]) < self.dropout\n",
     "                    a = a * mask\n",
@@ -180,6 +195,9 @@
     "        L = self.num_layer - 1\n",
     "        dw_value = [0] * L\n",
     "        db_value = [0] * L\n",
+    "        dgamma_value = [0] * (L - 1)\n",
+    "        dbeta_value = [0] * (L - 1)\n",
+    "\n",
     "        mask_idx = len(self.masks) - 1\n",
     "\n",
     "        if self.output_activation == \"sigmoid\":\n",
@@ -194,6 +212,8 @@
     "            dw_value[L-1] = (1/m) * np.dot(dz, a_prev.T)\n",
     "        db_value[L-1] = (1/m) * np.sum(dz, axis=1, keepdims=True)\n",
     "        \n",
+    "        bn_idx = len(self.bn_cache) - 1\n",
+    "\n",
     "        for i in reversed(range(L-1)): # start from L-2\n",
     "            a_prev = self.a_value[i] # get a from previous layer. a has a[0] initially, so we can use i directly\n",
     "            da = np.dot(self.weights[i+1].T, dz)\n",
@@ -205,29 +225,61 @@
     "                da /= self.dropout\n",
     "                mask_idx -= 1\n",
     "\n",
-    "            dz = self.ReLU_backward(da, self.z_value[i])\n",
+    "            dz_tilde = self.ReLU_backward(da, self.z_value[i])\n",
+    "\n",
+    "            z_cache = self.bn_cache[bn_idx]\n",
+    "            dz, dgamma, dbeta = self.batchnorm_backward(dz_tilde, z_cache, self.gamma[i])\n",
+    "            dgamma_value[i] = dgamma\n",
+    "            dbeta_value[i] = dbeta\n",
+    "\n",
+    "            bn_idx -= 1\n",
+    "\n",
     "            if self.L2:\n",
     "                dw_value[i] = (1/m) * np.dot(dz, a_prev.T) + (self.lambd/m) * self.weights[i]\n",
     "            else:\n",
     "                dw_value[i] = (1/m) * np.dot(dz, a_prev.T)\n",
     "            db_value[i] = (1/m) * np.sum(dz, axis=1, keepdims=True)\n",
     "\n",
-    "        return dw_value, db_value\n",
+    "        return dw_value, db_value, dgamma_value, dbeta_value\n",
     "    \n",
     "\n",
     "    # update w and b\n",
-    "    def update_params(self, dw_value, db_value, alpha=0.01):\n",
+    "    def update_params(self, dw_value, db_value, dgamma_value, dbeta_value, alpha=0.01):\n",
     "        if self.optimizer == None:\n",
     "            for i in range(len(dw_value)):\n",
     "                self.weights[i] -= alpha*dw_value[i]\n",
     "                self.bias[i] -= alpha*db_value[i]\n",
+    "            for i in range(len(dgamma_value)):\n",
+    "                self.gamma[i] -= alpha * dgamma_value[i]\n",
+    "                self.beta[i] -= alpha * dbeta_value[i]\n",
     "        elif isinstance(self.optimizer, Momentum): # use momentum\n",
-    "            self.weights, self.bias = self.optimizer.update(self.weights, self.bias, dw_value, db_value)\n",
+    "            self.weights, self.bias = self.optimizer.update(self.weights, self.bias, dw_value, db_value, dgamma_value, dbeta_value)\n",
     "        elif isinstance(self.optimizer, RMSprop): # use RMSprop\n",
-    "            self.weights, self.bias = self.optimizer.update(self.weights, self.bias, dw_value, db_value)\n",
+    "            self.weights, self.bias = self.optimizer.update(self.weights, self.bias, dw_value, db_value, dgamma_value, dbeta_value)\n",
     "        elif isinstance(self.optimizer, Adam): # use adam\n",
-    "            self.weights, self.bias = self.optimizer.update(self.weights, self.bias, dw_value, db_value)\n",
+    "            self.weights, self.bias = self.optimizer.update(self.weights, self.bias, dw_value, db_value, dgamma_value, dbeta_value)\n",
     "    \n",
+    "\n",
+    "    def batchnorm_backward(self, dZ_tilde, z_cache, gamma, eps=1e-8):\n",
+    "        z, mu, sigma, z_norm = z_cache\n",
+    "        m = z.shape[1]\n",
+    "        \n",
+    "        dgamma = np.sum(dZ_tilde * z_norm, axis=1, keepdims=True)\n",
+    "        dbeta = np.sum(dZ_tilde, axis=1, keepdims=True)\n",
+    "        \n",
+    "        dZ_norm = dZ_tilde * gamma\n",
+    "        \n",
+    "        dsigma = np.sum(dZ_norm * (z - mu), axis=1, keepdims=True) * (-0.5) * np.power(sigma + eps, -1.5)\n",
+    "        \n",
+    "        dmu_sum = np.sum(dZ_norm * (-1.0) / np.sqrt(sigma + eps), axis=1, keepdims=True)\n",
+    "        dmu_sum += dsigma * np.sum(-2.0 * (z - mu), axis=1, keepdims=True) / m\n",
+    "        \n",
+    "        dZ = dZ_norm / np.sqrt(sigma + eps)\n",
+    "        dZ += dsigma * 2.0 * (z - mu) / m\n",
+    "        dZ += dmu_sum / m\n",
+    "        \n",
+    "        return dZ, dgamma, dbeta\n",
+    "\n",
     "\n",
     "    # activation derivatives\n",
     "    def sigmoid_backward(self, da, z):\n",
@@ -324,8 +376,8 @@
     "\n",
     "            for x_batch, y_batch in self.get_mini_batch(x, y, batch_size):\n",
     "                predict = self.forward(x_batch)\n",
-    "                dw, db = self.backward(y_batch)\n",
-    "                self.update_params(dw, db, self.alpha)\n",
+    "                dw, db, dgamma, dbeta = self.backward(y_batch)\n",
+    "                self.update_params(dw, db, dgamma, dbeta, self.alpha)\n",
     "                cost = self.compute_cost(predict, y_batch)\n",
     "                acc = self.accuracy(predict, y_batch)\n",
     "\n",
