learn tensorboard, add_scalar and add_image

--- a/1. Intro_to_Neural_Network_and_Deep_Learning/neural_network.ipynb
+++ b/1. Intro_to_Neural_Network_and_Deep_Learning/neural_network.ipynb
@@ -11,7 +11,7 @@
     "$L(a, y) = -(y\\log{a}+(1-y)\\log{(1-a)})$  \n",
     "\n",
     "process of foreward and backward propagation:\n",
-    "<img src=\"image/propagation.png\" style=\"width:80%;\">\n",
+    "<img src=\"../image/propagation.png\" style=\"width:80%;\">\n",
     "\n",
     "we get the cost function by all the calculation at the front. We can modify w and b by using backward propagation by calculating the derivatives using chain rule."
    ]
@@ -22,7 +22,7 @@
    "metadata": {},
    "source": [
     "## Some Calculations\n",
-    "<img src=\"image/calculations.jpg\" style=\"width:50%;\">\n",
+    "<img src=\"../image/calculations.jpg\" style=\"width:50%;\">\n",
     "\n",
     "---\n"
    ]
@@ -141,7 +141,7 @@
    "source": [
     "## Process\n",
     "\n",
-    "<img src=\"image/process.png\" style=\"width:50%;\">\n",
+    "<img src=\"../image/process.png\" style=\"width:50%;\">\n",
     "\n",
     "---"
    ]
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "id": "e770e6b4",
    "metadata": {},
    "outputs": [
