--- a/2. Improving_Neural_Network/Regularization_and_Optimization.ipynb
+++ b/2. Improving_Neural_Network/Regularization_and_Optimization.ipynb
@@ -22,8 +22,8 @@
    "source": [
     "## Bias and Variance\n",
     "\n",
-    "<img src=\"image/note2/bav.png\" style=\"width:70%;\">\n",
-    "<img src=\"image/note2/td.png\" style=\"width:70%;\">\n",
+    "<img src=\"../image/note2/bav.png\" style=\"width:70%;\">\n",
+    "<img src=\"../image/note2/td.png\" style=\"width:70%;\">\n",
     "\n",
     "High bias: model performance poorly, having a high error percent  \n",
     "High variance: the error percent between training set and dev set has a significant difference  "
@@ -147,7 +147,7 @@
    "metadata": {},
    "source": [
     "## Vanishing and Exploding Gradients\n",
-    "<img src=\"image/note2/vanishing.png\" style=\"width:70%;\">  \n",
+    "<img src=\"../image/note2/vanishing.png\" style=\"width:70%;\">  \n",
     "\n",
     "If all the node in the graph above has a small w like 0.5, then $\\hat{y}$ will be very small, since each layer will time 0.5 to the z. If w has a value of 1.5, then $\\hat{y}$ will be very large. It also happens in back propagation, causing inefficient update of w at the initial layer."
    ]
@@ -211,11 +211,11 @@
     "\n",
     "$x^{\\{t\\}}$ represents $t_{th}$ mini batch\n",
     "\n",
-    "<img src=\"image/note2/minibatch.png\" style=\"width:70%;\">  \n",
+    "<img src=\"../image/note2/minibatch.png\" style=\"width:70%;\">  \n",
     "\n",
     "mini-batch training has more oscillations, since each iteration it is training on a different mini batch: \n",
     "\n",
-    "<img src=\"image/note2/minibatchtrain.png\" style=\"width:50%;\">  \n"
+    "<img src=\"../image/note2/minibatchtrain.png\" style=\"width:50%;\">  \n"
    ]
   },
   {
@@ -254,7 +254,7 @@
     "\n",
     "If $\\beta = 0.9$, then this formula can compute the average over the last 10 days. \n",
     "\n",
-    "<img src=\"image/note2/average.png\" style=\"width:70%;\">  \n",
+    "<img src=\"../image/note2/average.png\" style=\"width:70%;\">  \n",
     "\n",
     "the green line represent $\\beta = 0.98$ and the red line represents $\\beta = 0.9$. Having a larger $\\beta$ means having a larger weight to the previous values. Therefore, the green line adapts more slowly. On the other hand, the red line is more noisy, since it averages over a much shorter window.\n",
     "\n",
@@ -277,7 +277,7 @@
    "metadata": {},
    "source": [
     "## Gradient Descent with Momentum\n",
-    "<img src=\"image/note2/momentum.png\" style=\"width:70%;\">  \n",
+    "<img src=\"../image/note2/momentum.png\" style=\"width:70%;\">  \n",
     "\n",
     "When doing gradient descent with momentum, the gradient descent will also consider previous gradients. Thus, there will be less oscillations.  \n",
     "\n",
@@ -291,7 +291,7 @@
    "source": [
     "## RMSprop(root mean square prop)\n",
     "\n",
-    "<img src=\"image/note2/RMS.png\" style=\"width:70%;\">  \n",
+    "<img src=\"../image/note2/RMS.png\" style=\"width:70%;\">  \n",
     "\n",
     "RMSprop is used to reduce oscillations. Direction with consistently large gradient will have a large denominator, effectively lowering their learning rate, while directions that has more stable gradient get a relatively larger learning rate.\n",
     "\n",
